@@ -17,6 +17,8 @@ v7.5.1:
    - contributed by Alex Jarosch, completed by Stefan Saring
  ExerciseViewer changes:
  - GarminFitParser: ported to Kotlin (incl. tests)
+ - TopoGrafixGpxParser: added support for parsing GPX files with partial
+   altitude data (GitHub issue #191)
 
 v7.5.0:
  SportsTracker changes:
